// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardButton renders correctly when disabled: RewardButton disabled 1`] = `
<body>
  <div>
    <button
      class="golden-button reward-button"
      disabled=""
    >
      <div
        class="rpgui-container container framed framed-golden-2 golden-container"
      >
        <div
          class="item-container"
        >
          <div
            class="rpgui-icon test-icon item-icon"
          />
          <div
            class="item-content"
          >
            <p
              class="item-title"
            >
              Test Title
            </p>
            <p
              class="item-subtitle"
            >
              <i>
                Test Subtitle
              </i>
            </p>
            <p
              class="item-description"
            >
              Test Description
            </p>
          </div>
        </div>
      </div>
    </button>
  </div>
</body>
`;

exports[`RewardButton renders correctly: RewardButton 1`] = `
<body>
  <div>
    <button
      class="golden-button reward-button"
    >
      <div
        class="rpgui-container container framed framed-golden-2 golden-container"
      >
        <div
          class="item-container"
        >
          <div
            class="rpgui-icon test-icon item-icon"
          />
          <div
            class="item-content"
          >
            <p
              class="item-title"
            >
              Test Title
            </p>
            <p
              class="item-subtitle"
            >
              <i>
                Test Subtitle
              </i>
            </p>
            <p
              class="item-description"
            >
              Test Description
            </p>
          </div>
        </div>
      </div>
    </button>
  </div>
</body>
`;
